# webhook-event-publisher-api/api/src/main/java/com/java/barclaycardus/webhooksvcs/pubsrc/publisher/EventPublisher.java
@@ -6,4 +6,6 @@ import reactor.core.publisher.Mono;
 public interface EventPublisher {
 
     Mono<String> publish(EventEnvelope envelope);
+    
+    Mono<String> publishAvro(EventEnvelope envelope, String topicName, byte[] avroBytes);
 }
