# webhook-event-publisher-api/api/src/main/java/com/java/barclaycardus/webhooksvcs/pubsrc/schema/SchemaService.java
@@ -1,8 +1,13 @@
 package com.java.barclaycardus.webhooksvcs.pubsrc.schema;
 
 import reactor.core.publisher.Mono;
+import reactor.core.publisher.Flux;
 
 public interface SchemaService {
 
     Mono<SchemaDefinition> fetchSchema(SchemaReference reference);
+    
+    Flux<SchemaDefinition> fetchAllSchemas();
+    
+    Mono<SchemaDetailResponse> fetchSchemaBySchemaId(String schemaId);
 }
